Todos los registro necesarios

--- a/RegPedido.html
+++ b/RegPedido.html
@@ -13,7 +13,7 @@
         <title>Document</title>
     </head>
     <body>
-      <h3 style="text-align: center;">Formaulario de Regisdtro</h3>
+      <h3 style="text-align: center;">Formaulario de Registro</h3>
       <div style="margin-left: 50px; margin-right: 50px; margin-top: 80px;">
         <form class="row g-3">
           <div class="col-md-4">
