--- a/RegPedido.html
+++ b/RegPedido.html
@@ -13,7 +13,7 @@
         <title>Document</title>
     </head>
     <body>
-      <h3 style="text-align: center;">Formaulario de Registro</h3>
+      <h3 style="text-align: center;">Registro de Pedido</h3>
       <div style="margin-left: 50px; margin-right: 50px; margin-top: 80px;">
         <form class="row g-3">
           <div class="col-md-4">
@@ -39,7 +39,7 @@
             <input type="text" class="form-control" id="validationDefault01"  required>
           </div>
           <div class="col-md-3">
-            <label for="validationDefault05" class="form-label">Costo</label>
+            <label for="validationDefault05" class="form-label">Id pedido</label>
             <input type="number" class="form-control" id="validationDefault05" required>
           </div>
           <div class="col-12">
