--- a/RegPago.html
+++ b/RegPago.html
@@ -17,19 +17,35 @@
       <div style="margin-left: 50px; margin-right: 50px; margin-top: 80px;">
         <form class="row g-3">
           <div class="col-md-4">
-            <label for="validationDefault01" class="form-label">Nombres</label>
-            <input type="text" class="form-control" id="validationDefault01"  required>
+            <label for="validationDefault01" class="form-label">Fecha</label>
+            <input type="date" class="form-control" id="validationDefault01"  required>
           </div>
           <div class="col-md-4">
-            <label for="validationDefault02" class="form-label">Encargo</label>
-            <input type="text" class="form-control" id="validationDefault02" required>
+            <label for="validationDefault02" class="form-label">Folio</label>
+            <input type="number" class="form-control" id="validationDefault02" required>
           </div>
           <div class="col-md-3">
-            <label for="validationDefault04" class="form-label">Id Pedido</label>
+            <label for="validationDefault04" class="form-label">Cliente</label>
             <input type="text" class="form-control" id="validationDefault01"  required>
           </div>
           <div class="col-md-3">
-            <label for="validationDefault05" class="form-label">Costo</label>
+            <label for="validationDefault05" class="form-label">Piñata</label>
+            <input type="number" class="form-control" id="validationDefault05" required>
+          </div>
+          <div class="col-md-3">
+            <label for="validationDefault05" class="form-label">Decoraciones</label>
+            <input type="number" class="form-control" id="validationDefault05" required>
+          </div>
+          <div class="col-md-3">
+            <label for="validationDefault05" class="form-label">Subtotal</label>
+            <input type="number" class="form-control" id="validationDefault05" required>
+          </div>
+          <div class="col-md-3">
+            <label for="validationDefault05" class="form-label">Impuesto</label>
+            <input type="number" class="form-control" id="validationDefault05" required>
+          </div>
+          <div class="col-md-3">
+            <label for="validationDefault05" class="form-label">Total</label>
             <input type="number" class="form-control" id="validationDefault05" required>
           </div>
           <div class="col-12">
