--- a/RegPedido.html
+++ b/RegPedido.html
@@ -17,30 +17,18 @@
       <div style="margin-left: 50px; margin-right: 50px; margin-top: 80px;">
         <form class="row g-3">
           <div class="col-md-4">
-            <label for="validationDefault01" class="form-label">Nombres</label>
-            <input type="text" class="form-control" id="validationDefault01"  required>
+            <label for="validationDefault01" class="form-label">Fecha</label>
+            <input type="date" class="form-control" id="validationDefault01"  required>
           </div>
           <div class="col-md-4">
-            <label for="validationDefault02" class="form-label">Apellidos</label>
+            <label for="validationDefault02" class="form-label">Cliente</label>
             <input type="text" class="form-control" id="validationDefault02" required>
           </div>
           <div class="col-md-4">
-            <label for="validationDefaultUsername" class="form-label">Teléfono</label>
+            <label for="validationDefaultUsername" class="form-label">Folio</label>
             <div class="input-group">
-              <input type="text" class="form-control" id="validationDefaultUsername" aria-describedby="inputGroupPrepend2" required>
+              <input type="number" class="form-control" id="validationDefaultUsername" aria-describedby="inputGroupPrepend2" required>
             </div>
-          </div>
-          <div class="col-md-6">
-            <label for="validationDefault03" class="form-label">Dirección</label>
-            <input type="text" class="form-control" id="validationDefault03" required>
-          </div>
-          <div class="col-md-3">
-            <label for="validationDefault04" class="form-label">Encargo</label>
-            <input type="text" class="form-control" id="validationDefault01"  required>
-          </div>
-          <div class="col-md-3">
-            <label for="validationDefault05" class="form-label">Id pedido</label>
-            <input type="number" class="form-control" id="validationDefault05" required>
           </div>
           <div class="col-12">
             <button class="btn btn-primary" type="submit">Submit form</button>
