--- a/TabPedido.html
+++ b/TabPedido.html
@@ -1,1 +1,47 @@
-<p>Hola, Solo para ver que jale</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+    <title>Document</title>
+</head>
+<body>
+    <h3 style="text-align: center;">Inventario</h3>
+    <div style="margin-left: 50px; margin-right: 50px; margin-top: 80px;">
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Fecha</th>
+                <th scope="col">Cliente</th>
+                <th scope="col">Folio</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>02/06/2023</td>
+                <td>Francisco Perez Gutierrez</td>
+                <td>2341</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>30/05/2023</td>
+                <td>Martha Ortega</td>
+                <td>2340</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>25/05/2023</td>
+                <td>Juan José Martinez Romo</td>
+                <td>2339</td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
+    
+</body>
+</html>
