Cambio de titulos

--- a/TabPago.html
+++ b/TabPago.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3 style="text-align: center;">Inventario</h3>
+    <h3 style="text-align: center;">Pago realizado</h3>
     <div style="margin-left: 50px; margin-right: 50px; margin-top: 80px;">
         <table class="table">
             <thead>
